[gd_scene load_steps=2 format=3 uid="uid://c3fpvxjt32ppa"]

[ext_resource type="Script" uid="uid://cgy7t5qknynab" path="res://scenes/components/killzone.gd" id="1_ffuv1"]

[node name="Killzone" type="Area2D"]
script = ExtResource("1_ffuv1")

[node name="SlowdownTime" type="Timer" parent="."]
one_shot = true
ignore_time_scale = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SlowdownTime" to="." method="_on_slowdown_time_timeout"]
